Fixed z-indexes

--- a/src/styles/components/header.styl
+++ b/src/styles/components/header.styl
@@ -2,7 +2,7 @@
     height: 0
     position: fixed
     width: 100%
-    z-index: 1
+    z-index: 2
 
 .header__inner
     background-color: rgba(0, 0, 0, 0.5)
