--- a/src/styles/layout/layout.styl
+++ b/src/styles/layout/layout.styl
@@ -6,6 +6,7 @@
     padding-left: 20px
     padding-right: 20px
     position: relative
+    z-index: 1
 
 .main
 	min-height: calc(100% - 60px)
